--- a/esercizi/es10p107.ipynb
+++ b/esercizi/es10p107.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4e01b3ab",
+   "metadata": {},
+   "source": [
+    "#### es10 p107\n",
+    "Nel parco vicino alla scuola è installata una centrali-na per la misurazione del livello di polveri sottili PM10 nell'aria. Talvolta la centralina va in uno stato di errore per cui la misurazione delle PM10 fallisce e il dato corrispondente riporta il valore 9999,9 all'interno dell'array delle misurazioni dati.\n",
+    "Crea un array di 1000 campioni che generino dei valori secondo una distribuzione normale con valore medio 19 e varianza 5 e supponi che la centralina sia andata in errore 20 volte.\n",
+    "Con l'array così creato:\n",
+    "> individua se ci sono due dati errati in finestre di al massimo 5 misurazioni consecutive e segnala che la centralina deve essere riparata;\n",
+    "\n",
+    "> ripulisci i dati dai valori errati e calcola media, massimo e minimo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "9369d705",
